flow_screen_components/FlowScreenComponentsBasePack/force-app/main/default/objects/QuickRecordView__c/QuickRecordView__c.object-meta.xml
<CustomObject>
    <label>QuickRecordView</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>QuickRecordView Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickRecordViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>