flow_screen_components/FlowScreenComponentsBasePack/force-app/main/default/objects/QuickRecordView__c/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <label>Columns</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>