flow_screen_components/FlowScreenComponentsBasePack/force-app/main/default/objects/QuickRecordView__c/fields/FlowTableViewDefinition__c.field-meta.xml
<CustomField>
    <fullName>FlowTableViewDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlowTableViewDefinition</label>
    <referenceTo>FlowTableViewDefinition__c</referenceTo>
    <relationshipLabel>QuickRecordViews</relationshipLabel>
    <relationshipName>QuickRecordViews</relationshipName>
    <type>Lookup</type>
</CustomField>