flow_screen_components/FlowScreenComponentsBasePack/force-app/main/default/objects/QuickRecordView__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>