flow_screen_components/FlowScreenComponentsBasePack/force-app/main/default/objects/QuickRecordView__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>ObjectName__c</columns>
    <columns>Filter__c</columns>
    <columns>Columns__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>